# Resume-Tailoring

./: .env.example  .envrc  .gitignore  .latexmkrc  Makefile  README.md  SCHEMA.md  build.py  cv-style-ats.cls  cv-style.cls  pyproject.toml  requirements.txt  resume_bullet_manager.py
builder/: loader.py  ranker.py  renderer.py  resolver.py  selector.py  validator.py
content/: education.yaml  personal.yaml  personal.yaml.example  skills.yaml  summaries.yaml
content/experience/: ea.yaml  kano.yaml  kixeye.yaml  kixeye_sfg.yaml  pretio.yaml  savepoint.yaml  tinymob.yaml
docs/: CLAUDE.md  COMPANY_CONTEXT.md  PROJECT_CONTEXT.md
families/: analytics_engineer.yaml  data_analyst.yaml  data_engineer.yaml  data_scientist.yaml  economist.yaml  ml_engineer.yaml
output/analytics_engineer/: resume_ae.tex
output/data_analyst/: resume_da.tex
output/data_scientist/: resume_ds.tex
postings/Anthropic/: Research_Economist.txt
postings/Apple/: Analytics_Data_Engineer.txt
postings/Create_Music_Group/: Analytics_Engineer.txt  Senior_Data_Analyst.txt
postings/Electronic_Arts/: Advanced_Analyst_Apex.txt
postings/Fanatics/: Senior_Staff_Data_Analyst.txt
postings/Microsoft/: Senior_Analytics_Engineer.txt
postings/Reddit/: Data_Scientist_Ads.txt
postings/Redfin/: Senior_Data_Analyst.txt
postings/Sony_DS/: Staff_Data_Scientist.txt
postings/Tailscale/: Analytics_Engineer.txt
postings/That_Game_Company/: Senior_Data_Analyst.txt  cv-style-ats.cls  fonts
postings/Wizards_Of_The_Coast/: Principal_Business_Analyst.txt
templates/: resume-ats.tex.j2  resume.tex.j2
(+16 files in other folders)
